[project]
name = "graph-rag-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=5.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ipykernel>=6.30.0",
    "python-dotenv>=1.1.1",
    "langgraph>=0.6.0",
]
